# revit-standards-ssot

./: .gitignore  AGENTS.md  PROJECT_MEMORY.md  README.md  STATE.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: ORCHESTRATION_archived.md  architecture.md  curation_workflow.md  q-gem-instructions.md  sage-project-instructions.md
docs/decisions/: 20260501_deprecation_batch_1.md
docs/reports/: 20260430_curation_preflight.md  20260430_first_ingest_audit.md
exports/raw/: 20260430_220917.json
scripts/ingest/: bulk_curate.py
scripts/pyrevit/: README.md  extract_shared_params.py
sessions/: 0001-initial-setup.md  2026-04-28_sage_containerization_and_repo_setup.md  2026-04-29_sage_pyrevit_extraction_and_boundary_alignment.md  2026-04-30_sage_laptop_setup_revit_localdb_recovery.md  2026-05-01_sage_curation_workbench_governance.md
src/revit_standards_ssot/: __init__.py  db.py  export_review_csv.py  export_yaml.py  ingest.py  models.py
tests/: conftest.py  test_bulk_curate.py  test_db.py  test_ingest.py  test_validation.py  test_yaml.py
user-notes/: idea-for-agents.md
